FIX: Added new Card & H2 containers to fix alignment and gap issues on the homepage

--- a/style/main.scss
+++ b/style/main.scss
@@ -166,6 +166,12 @@
     box-shadow: 0px 4px 15px 0px $boxshadowColor;
     position: relative;
 
+    &__align {
+        @include flexCenter(column);
+        gap: 18px;
+        padding-bottom: 50px;
+    }
+
     &__container {
         display: flex;
         flex-direction: row;
